@@ -7,7 +7,7 @@ import java.util.List;
  * @param <G> the type of grades, which should extend Number
  */
 public class Student<G> {
-    private List<G> grades;
+    private final List<G> grades;
     private String name;
     private double average;
 
@@ -117,7 +117,7 @@ public class Student<G> {
      * @return the total score, or 0 if grades are empty or not numbers
      */
     public int getTotalScore() {
-        if (grades.isEmpty() || !(grades.get(0) instanceof Number)) {
+        if (grades.isEmpty() || !(grades.getFirst() instanceof Number)) {
             return 0;
         }
         return grades.stream()
